--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "messabout",
+  "name": "calmacconnachie",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,24 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "naive-ui": "^2.33.5",
+    "three": "^0.146.0",
+    "three-trackballcontrols": "^0.9.0",
+    "vfonts": "^0.0.3",
     "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@vicons/material": "^0.12.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "eslint-scope": "^7.1.1",
+    "eslint-visitor-keys": "^3.3.0",
+    "semver": "^7.3.8"
   },
   "eslintConfig": {
     "root": true,
